--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,6 +2,7 @@
 
 <LinearLayout android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:fitsSystemWindows="true"
     android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android">
@@ -9,7 +10,8 @@
         android:id="@+id/toolbar"
         layout="@layout/tool_bar"
         />
-    <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+        <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
@@ -17,7 +19,6 @@
         android:orientation="vertical"
         android:background="@color/colorPrimaryDark"
         android:id="@+id/drawerlayout"
-
         tools:context="com.example.lenovo.myfinance.MainActivity">
 
         <LinearLayout
@@ -26,40 +27,35 @@
             android:orientation="vertical">
 
 
-            <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:app="http://schemas.android.com/apk/res-auto"
                 xmlns:tools="http://schemas.android.com/tools"
                 android:id="@+id/container"
-
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:orientation="vertical"
                 tools:context="com.example.lenovo.myfinance.Main2Activity">
 
 
                 <FrameLayout
+                    android:id="@+id/fragment_frame"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:id="@+id/fragment_frame"/>
+                    android:layout_above="@+id/navigation"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true" />
 
                 <android.support.design.widget.BottomNavigationView
                     android:id="@+id/navigation"
-                    android:layout_width="0dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="0dp"
-                    android:layout_marginStart="0dp"
-                    android:background="@drawable/backgroundwhite"
-                    android:elevation="15dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
+                    android:background="@drawable/toolbar_background"
+                    android:layout_alignParentBottom="true"
                     app:menu="@menu/navigation" />
 
-            </android.support.constraint.ConstraintLayout>
+            </RelativeLayout>
+
         </LinearLayout>
-
-
-
-
 
         <android.support.design.widget.NavigationView
             android:layout_width="wrap_content"
@@ -69,9 +65,11 @@
             android:theme="@style/navbarfont"
             android:layout_gravity="start"/>
 
-
-
     </android.support.v4.widget.DrawerLayout>
+
+
+
+
 </LinearLayout>
 
 
