--- a/app/src/main/res/layout/fragment_transaction.xml
+++ b/app/src/main/res/layout/fragment_transaction.xml
@@ -164,12 +164,14 @@
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginTop="10dp"
+        android:elevation="10dp"
         />
         <android.support.v4.view.ViewPager
         android:background="@color/colorPrimaryDark"
         android:id="@+id/chooser_viewpager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:elevation="10dp"
         />
 
         <!--<android.support.v7.widget.RecyclerView-->
