--- a/app/src/main/res/layout/income_transaction_detail.xml
+++ b/app/src/main/res/layout/income_transaction_detail.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="6dp"
+    android:layout_marginTop="2dp"
     android:background="@drawable/transaction_background"
     android:orientation="vertical">
 
@@ -19,12 +20,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="2"
-            android:padding="10dp">
+            android:gravity="center_vertical"
+            android:padding="8dp">
             <ImageView
                 android:id="@+id/income_category_image"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
                 android:background="@drawable/logoback_shape"
+                android:layout_centerVertical="true"
                 android:layout_marginLeft="10dp"
                 android:elevation="5dp"/>
 
@@ -37,7 +40,7 @@
                 android:layout_marginTop="20dp"
                 android:text="30"
                 android:padding="2dp"
-                android:textSize="14dp" />
+                android:textSize="12sp" />
 
             <TextView
                 android:id="@+id/day_text"
@@ -47,7 +50,7 @@
                 android:layout_toRightOf="@id/income_category_image"
                 android:padding="2dp"
                 android:text="Wednesday"
-                android:textSize="10dp" />
+                android:textSize="8sp" />
 
             <TextView
                 android:id="@+id/month_text"
@@ -59,13 +62,13 @@
                 android:maxWidth="240dp"
                 android:padding="2dp"
                 android:text="February"
-                android:textSize="14dp" />
+                android:textSize="12sp" />
 
             <TextView
                 android:id="@+id/year_no"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-
+                android:textSize="12sp"
                 android:layout_marginTop="20dp"
                 android:layout_toRightOf="@id/month_text"
                 android:padding="2dp"
@@ -86,15 +89,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="5dp"
-                android:text="+" />
+                android:text="+"
+                android:textColor="@color/darkturq"/>
 
             <TextView
                 android:id="@+id/transfer_total"
                 android:layout_width="50dp"
                 android:layout_height="wrap_content"
-
-                android:textSize="25sp"
-
+                android:textSize="20sp"
                 />
         </LinearLayout>
     </LinearLayout>
